@@ -2,6 +2,7 @@ import Foundation
 
 public struct AgentConfiguration {
     public init() {}
-    public var otelCollectorAddress = "127.0.0.1"
-    public var otelCollectorPort = 8200
+    public var collectorHost = "127.0.0.1"
+    public var collectorPort = 8200
+    public var collectorTLS = false; 
 }
