@@ -20,5 +20,13 @@
 [[release-notes-preview-1]]
 ==== Technical preview
 
+[[release-notes-x.x.x]]
+==== x.x.x - tbd
+[float]
+===== Features
+* Network status attributes {pull}20[#20]
+* Device Resources {pull}16[#16]
+
+
 // Using the template above, release notes go here.
 // append the version number of the release to the heading above
